popup nie działa

--- a/RecipeMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeMVC/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Recipes" asp-action="Index" >Przepisy</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
@@ -42,6 +43,7 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
+        <partial name="_Popup"/>
         @RenderBody()
         <hr />
         <footer>
