--- a/RecipeMVC/Views/Home/Index.cshtml
+++ b/RecipeMVC/Views/Home/Index.cshtml
@@ -1,1 +1,3 @@
-﻿<h1>stronka Kasi :* :* :* </h1>
+﻿<h1>stronka Kasi :* :* :* MVC</h1>
+
+<a asp-action="Index" asp-controller="Recipes" class="btn btn-success">Przepisy</a>
