--- a/RecipeMVC/Views/Recipes/Details.cshtml
+++ b/RecipeMVC/Views/Recipes/Details.cshtml
@@ -8,7 +8,10 @@
 <h2>Details</h2>
 
 <div>
-    <h4>RecipesDTO</h4>
+    <img class="imageSize" src="data:image/png;base64, @Model.Image" alt="Brak obrazka" />
+
+    @*<img src="data:image/png;base64, @Model.Image" alt="Brak obrazka" />*@
+    @*<img src="~/images/@Model.Image" alt="Brak obrazka" />*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,12 +20,12 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+        @*<dt>
+                @Html.DisplayNameFor(model => model.Image)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Image)
+            </dd>*@
         <dt>
             @Html.DisplayNameFor(model => model.Body)
         </dt>
