--- a/RecipeMVC/wwwroot/css/site.css
+++ b/RecipeMVC/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 20px;
 }
 
@@ -34,4 +34,17 @@ body {
     .carousel-caption {
         display: none;
     }
+}
+
+.imageSize{
+    width: 40%;
+}
+
+.popup{
+    width: 300px;
+    height: 150px;
+    border: red 1px solid;
+}
+.hidden{
+    display:none;
 }
