--- a/RecipeMVC/Views/Shared/_Popup.cshtml
+++ b/RecipeMVC/Views/Shared/_Popup.cshtml
@@ -1,6 +1,8 @@
-﻿
-<div id="popup" class="popup hidden">
-    <p>Ususnąć?</p>
-    <button class="btn btn-danger" onclick="deleteRow()">OK</button>
-    <button class="btn btn-default" onclick="hidePopup()">Anuluj</button>
+﻿<div id="popupShadow" class="hidden">
+    <div id="popup" class="popup hidden">
+        <p>Usunąć?</p>
+        <button class="btn btn-danger okButton" onclick="deleteRow()">OK</button>
+        <button class="btn btn-default cancelButton" onclick="hidePopup()">Anuluj</button>
+    </div>
 </div>
+
