--- a/RecipeMVC/Views/_ViewImports.cshtml
+++ b/RecipeMVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using RecipeMVC.Models
 @using Domain.Models.DTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,RecipeMVC.TagHelpers
 
