--- a/RecipeMVC/wwwroot/css/site.css
+++ b/RecipeMVC/wwwroot/css/site.css
@@ -40,11 +40,38 @@ body {
     width: 40%;
 }
 
-.popup{
+.popup {
     width: 300px;
     height: 150px;
-    border: red 1px solid;
+    border: #99dfe4 1px solid;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 3px 3px gray;
+    z-index: 999999;
+    opacity: 1;
+    margin-left: 30%;
+    margin-top: 40%;
+    position: absolute;
 }
 .hidden{
     display:none;
+}
+.popup > .okButton {
+    margin: 15px;
+    margin-left: 80px;
+}
+
+.popup > p {
+    margin-top: 5px;
+    margin-left: 8em;
+}
+
+#popupShadow{
+    background-color: rgba(155,0,255,0.5);
+    width: 100%;
+    height:100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+
 }
